--- a/src/component/components.css
+++ b/src/component/components.css
@@ -1,77 +1,97 @@
 .Logo {
-    width: 300px;
-    margin-left: 100px;
+  width: 300px;
+  margin-left: 100px;
 }
 
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 .LinkDiv li {
-    display: inline;
-    margin-right: 60px;
+  display: inline;
+  margin-right: 60px;
 }
 
 li a {
-    text-decoration: none;
-    color: #000;
+  text-decoration: none;
+  color: #000;
 }
 
 .Links {
-    float: right;
-    margin-top: 60px;
-    margin-right: 300px;
+  float: right;
+  margin-top: 60px;
+  margin-right: 300px;
 }
 
 .Links ul li {
-    color: rgba(255, 255, 255, 0.884);
-    margin-bottom: 25px;
+  color: rgba(255, 255, 255, 0.884);
+  margin-bottom: 25px;
 }
 
 .LogoDiv {
-    display: inline-block;
+  display: inline-block;
 }
 
 .LinkDiv {
-    float: right;
-    margin-top: 10px;
+  float: right;
+  margin-top: 10px;
 }
 
 .BookingButton {
-    border: solid 2px gray;
-    padding: 5px 20px 5px 20px;
+  border: solid 2px gray;
+  padding: 5px 20px 5px 20px;
 }
 
 .BookingButtonDark {
-    border: solid 2px gray;
-    padding: 5px 20px 5px 20px;
-    color: rgba(255, 255, 255, 0.884);
-    margin-left: 10px;
-    width: 140px;
-    
+  border: solid 2px gray;
+  padding: 5px 20px 5px 20px;
+  color: rgba(255, 255, 255, 0.884);
+  margin-left: 10px;
+  width: 140px;
 }
 
 .Salon {
-    width: 100%;
+  width: 100%;
 }
 
 .FooterDiv {
-    background-color: black;
-    height: 350px;
-    margin-top: 80px;
+  background-color: black;
+  height: 350px;
+  margin-top: 80px;
 }
 
 .FooterLogo {
-    width: 350px;
-    margin-left: 30px;
+  width: 350px;
+  margin-left: 30px;
 }
 
 .FooterLeft {
-    display: inline-block;
+  display: inline-block;
 }
 
 h5 {
-    color: rgba(255, 255, 255, 0.884);
-    margin-left: 50px;
-    margin-bottom: 30px;
+  color: rgba(255, 255, 255, 0.884);
+  margin-left: 50px;
+  margin-bottom: 30px;
+}
+
+.item {
+  max-height: 21.6rem;
+  min-width: 18rem;
+  padding: 40px;
+}
+
+.item img {
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+
+.inner-carousel {
+  display: flex;
+}
+
+.carousel {
+  cursor: grab;
+  overflow: hidden;
 }
