Refactoring changing file names and styling fix

--- a/src/component/components.css
+++ b/src/component/components.css
@@ -52,6 +52,7 @@ li a {
 
 .Salon {
   width: 100%;
+  margin-bottom: 100px;
 }
 
 .FooterDiv {
@@ -94,4 +95,5 @@ h5 {
 .carousel {
   cursor: grab;
   overflow: hidden;
+  margin-bottom: 150px;
 }
