--- a/src/component/components.css
+++ b/src/component/components.css
@@ -98,3 +98,10 @@ h5 {
   overflow: hidden;
   margin-bottom: 150px;
 }
+
+@media only screen and (max-width: 600px) {
+    .Logo {
+        width: 300px;
+        margin-left: 0;
+      }
+}
