--- a/src/component/components.css
+++ b/src/component/components.css
@@ -144,19 +144,37 @@ h5 {
     font-weight: 500;
 }
 .OurCrew h2 {
-    font-weight: 300;
+    font-weight: 400;
+    margin: 5px;
 }
-
+.OurCrew h3 {
+    font-weight: 400;
+    font-size: medium;
+}
 .OurCrew div {
     display: inline-block;
-    margin-left: 0px;
+    background-color: #9e8401ab;
+    margin: 100px 80px 10px 80px;
+    width: 18em;
 }
 
 .OurCrew img {
     width: 17em;
-    margin-top: 50px;
-    border-radius: 2em;
-    margin: 100px 80px 10px 80px;
+    margin-top: 8px;
+    
+}
+
+.OurCrew ul  {
+    padding: 0;
+    margin-top: 70px;
+    
+}
+
+.OurCrew li {
+    width: 10em;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 @media only screen and (max-width: 600px) {
@@ -165,10 +183,10 @@ h5 {
         margin-left: 0;
       }
       
-      .OurCrew img {
-        width: 17em;
-        margin-top: 50px;
-        border-radius: 2em;
-        margin: 50px 0px 10px 0px;
+      .OurCrew div {
+        display: inline-block;
+        margin-left: 0px;
+        background-color: red;
+        margin: 100px 80px 10px 80px;
     }
 }
