--- a/Client/src/component/components.css
+++ b/Client/src/component/components.css
@@ -231,7 +231,7 @@ h5 {
 
 .HairStylistDiv {
   width: 25%;
-  height: 500px;
+  height: 550px;
   margin-left: 50px;
   background-color: white;
   display: inline-block;
@@ -261,7 +261,7 @@ h5 {
 }
 .AppointmentDiv {
   width: 60%;
-  height: 500px;
+  height: 550px;
   margin-right: 50px;
   background-color: white;
   float: right;
@@ -282,6 +282,7 @@ h5 {
 .AppointmentList h6 {
   display: inline-block;
   margin: 10px 20px 10px 20px;
+  width: 100px;
 }
 
 
