--- a/Client/src/component/components.css
+++ b/Client/src/component/components.css
@@ -277,12 +277,70 @@ h5 {
 }
 .AppointmentListDiv {
   margin-left: 30px;
+  overflow: scroll;
 }
 
-.AppointmentList h6 {
+.Title .Apptime {
+  display: inline-block;
+  margin: 10px 2px 10px 20px;
+  width: 70px;
+}
+.Title .Appdate {
+  display: inline-block;
+  margin: 10px 2px 10px 20px;
+  width: 100px;
+}
+.Title .Appname {
+  display: inline-block;
+  margin: 10px 2px 10px 20px;
+  width: 130px;
+}
+.Title .Appprice {
   display: inline-block;
   margin: 10px 20px 10px 20px;
+  width: 20px;
+}
+
+.Title .Appstylist {
+  display: inline-block;
+  margin: 10px 20px 10px 20px;
+  width: 20px;
+}
+
+.AppointmentList {
+  background-color: rgb(240, 240, 240);
+  border-radius: 10px;
+  width: auto;
+  margin: 10px;
+  display: flex;
+  
+}
+
+.AppointmentList .Apptime {
+  display: inline-block;
+  margin: 20px 2px 20px 20px;
+  width: 70px;
+}
+.AppointmentList .Appdate {
+  display: inline-block;
+  margin: 10px 2px 10px 20px;
   width: 100px;
+}
+.AppointmentList .Appname {
+  display: inline-block;
+  margin: 10px 2px 10px 20px;
+  width: 130px;
+}
+.AppointmentList .Appprice {
+  display: inline-block;
+  margin: 10px 20px 10px 20px;
+  width: 20px;
+}
+
+.AppointmentList .Appstylist {
+  display: inline-block;
+  margin: 10px 20px 10px 20px;
+  width: auto;
 }
 
 .row {
