--- a/Client/src/component/components.css
+++ b/Client/src/component/components.css
@@ -235,6 +235,7 @@ h5 {
   width: 25%;
   height: 550px;
   margin-left: 50px;
+  border-radius: 10px;
   background-color: white;
   display: inline-block;
 }
@@ -265,6 +266,7 @@ h5 {
   width: 60%;
   height: 550px;
   margin-right: 50px;
+  border-radius: 10px;
   background-color: white;
   float: right;
   overflow: scroll;
@@ -279,56 +281,78 @@ h5 {
   margin: 20px;
 }
 .AppointmentListDiv {
-  margin-left: 30px;
+  margin-top: 110px;
+}
+.Title {
+  position: absolute;
+  background-color: rgba(255, 254, 254, 0.957);
+  width: 60%;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom: solid 1px rgba(128, 128, 128, 0.33);
+  
+}
+
+.Title p {
+  font-weight: 600;
+  margin-left: 50px;
+}
+
+.Title h2 {
+  font-size: 20px;
+  font-weight: 600;
+  margin-left: 60px;
+  margin-top: 20px;
+  margin-bottom: 0;
 }
 
 .Title .Apptime {
   display: inline-block;
-  margin: 10px 2px 10px 20px;
+  margin: 10px 0px 0px 40px;
   width: 70px;
 }
 .Title .Appdate {
   display: inline-block;
-  margin: 10px 2px 10px 20px;
+  margin: 10px 2px 0px 30px;
   width: 100px;
 }
 .Title .Appname {
   display: inline-block;
-  margin: 10px 2px 10px 20px;
+  margin: 10px 2px 0px 20px;
   width: 130px;
 }
 .Title .Appprice {
   display: inline-block;
-  margin: 10px 20px 10px 20px;
+  margin: 10px 20px 0px 20px;
   width: 20px;
-}
-
-.Title {
-  margin-left: 40px;
 }
 
 .Title .Appstylist {
   display: inline-block;
-  margin: 10px 20px 10px 20px;
+  margin: 10px 20px 0px 50px;
   width: 20px;
 }
 
 .AppointmentList {
-  background-color: rgb(240, 240, 240);
-  border-radius: 10px;
   width: auto;
-  margin: 10px;
+  border-radius: 5px;
+  background-color: rgb(244, 244, 245);
+  margin-bottom: 5px;
+  margin-top: 5px;
+  padding-left: 30px;
+  margin-left: 3%;
+  margin-right: 3%;
   
 }
 
 .AppointmentList .Apptime {
   display: inline-block;
-  margin: 20px 2px 20px 20px;
+  margin: 20px 2px 20px 25px;
   width: 70px;
 }
 .AppointmentList .Appdate {
   display: inline-block;
-  margin: 10px 2px 10px 20px;
+  margin: 10px 2px 10px 30px;
   width: 100px;
 }
 .AppointmentList .Appname {
@@ -338,13 +362,13 @@ h5 {
 }
 .AppointmentList .Appprice {
   display: inline-block;
-  margin: 10px 20px 10px 20px;
+  margin: 10px 20px 10px 40px;
   width: 20px;
 }
 
 .AppointmentList .Appstylist {
   display: inline-block;
-  margin: 10px 20px 10px 20px;
+  margin: 10px 20px 10px 50px;
   width: auto;
 }
 
