Implement sign in and sign out button - Users and Stylists can now log in with Id - We still need to figure out how to make the page to stay logged in.

--- a/Client/src/component/components.css
+++ b/Client/src/component/components.css
@@ -102,133 +102,129 @@ h5 {
 }
 
 .ServicesHome {
-    text-align: center;
+  text-align: center;
 }
 
 .ServicesHome img {
-    width: 6em;
-    padding: 10px 80px 10px 80px;
-    margin-top: 50px;
+  width: 6em;
+  padding: 10px 80px 10px 80px;
+  margin-top: 50px;
 }
 
 .ServicesHome div {
-    display: inline-block;
+  display: inline-block;
 }
 
 .ServicesHome h1 {
-    font-weight: 500;
+  font-weight: 500;
 }
 .ServicesHome h2 {
-    font-weight: 300;
+  font-weight: 300;
 }
 
-.ServicesHome ul  {
-    padding: 0;
-    margin-top: 50px;
-    
+.ServicesHome ul {
+  padding: 0;
+  margin-top: 50px;
 }
 
 .ServicesHome li {
-    width: 10em;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+  width: 10em;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .OurCrew {
-    text-align: center;
-    margin-top: 200px;
+  text-align: center;
+  margin-top: 200px;
 }
 
 .OurCrew h1 {
-    font-weight: 500;
+  font-weight: 500;
 }
 .OurCrew h2 {
-    font-weight: 400;
-    margin: 5px;
+  font-weight: 400;
+  margin: 5px;
 }
 .OurCrew h3 {
-    font-weight: 400;
-    font-size: medium;
+  font-weight: 400;
+  font-size: medium;
 }
 .OurCrew div {
-    display: inline-block;
-    background-color: #9e8401ab;
-    margin: 100px 80px 10px 80px;
-    width: 18em;
+  display: inline-block;
+  background-color: #9e8401ab;
+  margin: 100px 80px 10px 80px;
+  width: 18em;
 }
 
 .OurCrew img {
-    width: 17em;
-    margin-top: 8px;
-    
+  width: 17em;
+  margin-top: 8px;
 }
 
-.OurCrew ul  {
-    padding: 0;
-    margin-top: 70px;
-    
+.OurCrew ul {
+  padding: 0;
+  margin-top: 70px;
 }
 
 .OurCrew li {
-    width: 10em;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+  width: 10em;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .ContactUs {
-    background-color: white;
-    margin-right: 10%;
-    margin-left: 10%;
-    height: 45em;
-    margin-top: 5%;
-    text-align: center;
+  background-color: white;
+  margin-right: 10%;
+  margin-left: 10%;
+  height: 45em;
+  margin-top: 5%;
+  text-align: center;
 }
 .ContactUs img {
-    height: 45em;
-    float: right;
+  height: 45em;
+  float: right;
 }
 .ContactUsInfo {
-    text-align: left;
-    margin-top: 30px;
-    margin-left: 30px;
-    display: inline-block;
-    width: 40%;
+  text-align: left;
+  margin-top: 30px;
+  margin-left: 30px;
+  display: inline-block;
+  width: 40%;
 }
 
 .ContactUsInfo h1 {
-    font-weight: 700;
-    color: #505050;
+  font-weight: 700;
+  color: #505050;
 }
 
 .ContactUsInfo h3 {
-    font-weight: 300;
-    margin-bottom: 40px;
-    margin-top: 20px;
+  font-weight: 300;
+  margin-bottom: 40px;
+  margin-top: 20px;
 }
 
 .ContactUsInfo h4 {
-    font-weight: 400;
-    margin-top: 10px;
+  font-weight: 400;
+  margin-top: 10px;
 }
 
-
 .BookingButtonContact {
-    width: 150px;
-    display: inline-block;
-    text-align: center;
-    padding: 5px;
-    border: 2px solid #505050;
+  width: 150px;
+  display: inline-block;
+  text-align: center;
+  padding: 5px;
+  border: 2px solid #505050;
 }
 
 .ContactUsInfo ul {
-    margin-top: 20px;
-    padding: 0;
+  margin-top: 20px;
+  padding: 0;
 }
 .BookingButtonContact li {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .HairStylistDiv {
@@ -244,12 +240,10 @@ h5 {
   width: 80px;
   border-radius: 100%;
   margin: 20px;
-  display: inline-block;
 }
 
 .HairStylistDiv h3 {
   margin: 40px 20px 20px 20px;
-  float: right;
 }
 
 .HairStylistDiv h4 {
@@ -263,13 +257,14 @@ h5 {
   font-weight: 400;
 }
 .AppointmentDiv {
-  width: 60%;
+  width: 45%;
   height: 550px;
-  margin-right: 50px;
+  margin-right: 150px;
   border-radius: 10px;
   background-color: white;
   float: right;
   overflow: scroll;
+  text-align: center;
 }
 .TestInput {
   width: 150px;
@@ -280,35 +275,38 @@ h5 {
   height: 20px;
   margin: 20px;
 }
+
+.SignOut {
+  width: 100px;
+  height: 20px;
+  margin: 20px;
+}
 .AppointmentListDiv {
   margin-top: 110px;
 }
 .Title {
   position: absolute;
   background-color: rgba(255, 254, 254, 0.957);
-  width: 60%;
+  width: 45%;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   border-bottom: solid 1px rgba(128, 128, 128, 0.33);
-  
 }
 
 .Title p {
   font-weight: 600;
-  margin-left: 50px;
 }
 
 .Title h2 {
   font-size: 20px;
   font-weight: 600;
-  margin-left: 60px;
-  margin-top: 20px;
+  margin-top: 10px;
   margin-bottom: 0;
 }
 
 .Title .Apptime {
   display: inline-block;
-  margin: 10px 0px 0px 40px;
+  margin: 10px 0px 0px 0px;
   width: 70px;
 }
 .Title .Appdate {
@@ -318,12 +316,12 @@ h5 {
 }
 .Title .Appname {
   display: inline-block;
-  margin: 10px 2px 0px 20px;
+  margin: 10px 2px 0px 30px;
   width: 130px;
 }
 .Title .Appprice {
   display: inline-block;
-  margin: 10px 20px 0px 20px;
+  margin: 10px 20px 0px 40px;
   width: 20px;
 }
 
@@ -335,19 +333,51 @@ h5 {
 
 .AppointmentList {
   width: auto;
-  border-radius: 5px;
-  background-color: rgb(244, 244, 245);
   margin-bottom: 5px;
   margin-top: 5px;
-  padding-left: 30px;
-  margin-left: 3%;
-  margin-right: 3%;
-  
+}
+
+.AppointmentMultiList {
+  width: auto;
+  border-bottom: 1px rgba(128, 128, 128, 0.325) solid;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  padding-left: 4%;
+  padding-right: 3%;
+}
+
+
+
+.AppointmentMultiList .Apptime {
+  display: inline-block;
+  margin: 20px 2px 20px 0px;
+  width: 70px;
+}
+.AppointmentMultiList .Appdate {
+  display: inline-block;
+  margin: 10px 2px 10px 30px;
+  width: 100px;
+}
+.AppointmentMultiList .Appname {
+  display: inline-block;
+  margin: 10px 2px 10px 30px;
+  width: 130px;
+}
+.AppointmentMultiList .Appprice {
+  display: inline-block;
+  margin: 10px 20px 10px 50px;
+  width: 20px;
+}
+
+.AppointmentMultiList .Appstylist {
+  display: inline-block;
+  margin: 10px 20px 10px 60px;
+  width: auto;
 }
 
 .AppointmentList .Apptime {
   display: inline-block;
-  margin: 20px 2px 20px 25px;
+  margin: 20px 2px 20px 0px;
   width: 70px;
 }
 .AppointmentList .Appdate {
@@ -362,31 +392,27 @@ h5 {
 }
 .AppointmentList .Appprice {
   display: inline-block;
-  margin: 10px 20px 10px 40px;
+  margin: 10px 20px 10px 50px;
   width: 20px;
 }
 
 .AppointmentList .Appstylist {
   display: inline-block;
-  margin: 10px 20px 10px 50px;
+  margin: 10px 20px 10px 60px;
   width: auto;
 }
 
 .row {
-  display:grid;
+  display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  
 }
 
-
-
 .container {
-  
   margin-top: 80px;
-  
+
   justify-content: center;
   height: 50vh;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .col-lg-4 {
@@ -405,18 +431,18 @@ h5 {
 
 .card .face {
   position: absolute;
-    color: rgb(190, 181, 51);
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
-    border-radius: 15px;
-    background: rgb(12, 12, 12);
-    transform-style: preserve-3d;
-    transition: 0.5s;
-    backface-visibility: hidden;
-    border-top: 1px solid #ddd;
-    border-left: 1px solid #ddd;
+  color: rgb(190, 181, 51);
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
+  background: rgb(12, 12, 12);
+  transform-style: preserve-3d;
+  transition: 0.5s;
+  backface-visibility: hidden;
+  border-top: 1px solid #ddd;
+  border-left: 1px solid #ddd;
   /* border-right: 1px solid #999;
 border-bottom: 1px solid #999; */
 }
@@ -453,11 +479,11 @@ border-bottom: 1px solid #999; */
 
 .card .face.back-face {
   position: absolute;
-    background: rgb(12, 12, 12);
-    transform: rotateY(180deg);
-    padding: 20px 30px;
-    text-align: center;
-    user-select: none;
+  background: rgb(12, 12, 12);
+  transform: rotateY(180deg);
+  padding: 20px 30px;
+  text-align: center;
+  user-select: none;
 }
 
 .card .face.back-face .fa-quote-left {
@@ -478,19 +504,16 @@ border-bottom: 1px solid #999; */
   transform: rotateY(360deg);
 }
 
-
-
-
 @media only screen and (max-width: 600px) {
-    .Logo {
-        width: 300px;
-        margin-left: 0;
-      }
-      
-      .OurCrew div {
-        display: inline-block;
-        margin-left: 0px;
-        background-color: red;
-        margin: 100px 80px 10px 80px;
-    }
+  .Logo {
+    width: 300px;
+    margin-left: 0;
+  }
+
+  .OurCrew div {
+    display: inline-block;
+    margin-left: 0px;
+    background-color: red;
+    margin: 100px 80px 10px 80px;
+  }
 }
