--- a/Client/src/component/components.css
+++ b/Client/src/component/components.css
@@ -228,12 +228,52 @@ h5 {
 }
 
 .HairStylistDiv {
-  width: 25%;
+  width: 100%;
+  text-align: center;
+  height: 300px;
+  border-radius: 10px;
+  background-color: white;
+  float: right;
+}
+
+.BookingPage {
+  width: 100%;
+  text-align: center;
+}
+
+.Booking {
+  width: auto;
+  border-radius: 10px;
+  display: inline-block;
+}
+
+.BookingAppointmentDiv {
   height: 550px;
   margin-left: 50px;
   border-radius: 10px;
   background-color: white;
   display: inline-block;
+}
+
+.BookingAppointmentDiv img {
+  width: 80px;
+  border-radius: 100%;
+  margin: 20px;
+}
+
+.BookingAppointmentDiv h3 {
+  margin: 40px 20px 20px 20px;
+}
+
+.BookingAppointmentDiv h4 {
+  margin: 10px 10px 10px 20px;
+  font-size: 18px;
+  font-weight: 700;
+}
+.BookingAppointmentDiv h6 {
+  margin: 10px 20px 10px 20px;
+  font-size: 13px;
+  font-weight: 400;
 }
 
 .HairStylistDiv img {
@@ -345,8 +385,6 @@ h5 {
   padding-left: 4%;
   padding-right: 3%;
 }
-
-
 
 .AppointmentMultiList .Apptime {
   display: inline-block;
