--- a/Client/src/component/components.css
+++ b/Client/src/component/components.css
@@ -296,101 +296,34 @@ h5 {
 .container {
   
   margin-top: 80px;
-  
+  background-color: aqua;
   justify-content: center;
   height: 50vh;
   font-family: 'Poppins', sans-serif;
+  overflow: hidden; 
+  
+  margin: 0;
+  padding: 0;
+  
 }
 
-.col-lg-4 {
-  display: flex;
-  justify-content: center;
+.swiper {
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
-.card {
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
   width: 300px;
   height: 300px;
-  transform-style: preserve-3d;
-  perspective: 500px;
-  border: none;
-  background-color: inherit;
 }
 
-.card .face {
-  position: absolute;
-    color: rgb(190, 181, 51);
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
-    border-radius: 15px;
-    background: rgb(12, 12, 12);
-    transform-style: preserve-3d;
-    transition: 0.5s;
-    backface-visibility: hidden;
-    border-top: 1px solid #ddd;
-    border-left: 1px solid #ddd;
-  /* border-right: 1px solid #999;
-border-bottom: 1px solid #999; */
+.swiper-slide img {
+  display: block;
+  width: 100%;
 }
-
-.card .face.front-face,
-.card .face.back-face {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.card .face.front-face .profile {
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  object-fit: cover;
-}
-
-.card .face.front-face .name {
-  letter-spacing: 2px;
-}
-
-.card .face.front-face .designation {
-  font-size: 0.8rem;
-  color: #ddd;
-  letter-spacing: 0.8px;
-}
-
-.card:hover .face.front-face {
-  transform: rotateY(180deg);
-}
-
-.card .face.back-face {
-  position: absolute;
-    background: rgb(12, 12, 12);
-    transform: rotateY(180deg);
-    padding: 20px 30px;
-    text-align: center;
-    user-select: none;
-}
-
-.card .face.back-face .fa-quote-left {
-  position: absolute;
-  top: 25px;
-  left: 25px;
-  font-size: 1.2rem;
-}
-
-.card .face.back-face .fa-quote-right {
-  position: absolute;
-  bottom: 35px;
-  right: 25px;
-  font-size: 1.2rem;
-}
-
-.card:hover .face.back-face {
-  transform: rotateY(360deg);
-}
-
 
 
 
