--- a/Client/src/component/components.css
+++ b/Client/src/component/components.css
@@ -254,15 +254,6 @@ h5 {
   padding: 0;
 }
 
-.HairStylistDiv {
-  width: 100%;
-  text-align: center;
-  height: 300px;
-  border-radius: 10px;
-  background-color: white;
-  float: right;
-}
-
 .BookingPage {
   width: 100%;
   text-align: center;
@@ -303,10 +294,39 @@ h5 {
   font-weight: 400;
 }
 
+.HairStylistDiv {
+  width: 100%;
+  height: 485px;
+  text-align: center;
+  border-radius: 20px;
+  background-color: white;
+  margin-top: 30px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
 .HairStylistDiv img {
   width: 80px;
   border-radius: 100%;
   margin: 20px;
+}
+.HairStylistDiv .LoginPic {
+  width: auto;
+  height: 485px;
+  border-top-right-radius: 30px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 30px;
+  margin: 0px;
+  float: right;
+}
+.HairStylistDiv .LoginDiv {
+  width: 40%;
+  height: auto;
+  border-radius: 0;
+  margin: 10px;
+  margin-bottom: 50px;
+  display: inline-block;
 }
 
 .HairStylistDiv h3 {
