--- a/Client/src/component/components.css
+++ b/Client/src/component/components.css
@@ -98,8 +98,10 @@ h5 {
 .carousel {
   cursor: grab;
   overflow: hidden;
-  margin-bottom: 150px;
+  margin-bottom: 140px;
 }
+
+
 
 .ServicesHome {
     text-align: center;
@@ -296,7 +298,7 @@ h5 {
 .container {
   
   margin-top: 80px;
-  background-color: aqua;
+  
   justify-content: center;
   height: 50vh;
   font-family: 'Poppins', sans-serif;
@@ -316,27 +318,37 @@ h5 {
   background-position: center;
   background-size: cover;
   width: 320px;
-  background: #fff;
+  background: #fbfbf2;
   border-radius: 10px;
+  box-shadow: 0 15px 50px rgba(0,0,0,0.2);
+  filter:blur(4px);
+
   
+}
+
+.swiper-slide-active
+{
+  filter:blur(0px);
+  background: #fff;
 }
 
 .testimonialBox{
   position: relative;
   width: 100%;
   padding: 40px;
-  padding-top: 90px;
+  padding-top: 55px;
   color: #999;
+  box-sizing: border-box;
   
 }
 
 .testimonialBox .quote{
   position: absolute;
   top: 20px;
-  right: 30px;
+  right:30px;
   opacity: 0.2;
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
 }
 
 .testimonialBox .details
@@ -384,6 +396,13 @@ h5 {
    color: #666;
   
 }
+
+.swiper-3d .swiper-slide-shadow-left, .swiper-3d .swiper-slide-shadow-right
+{
+  background-image: none;
+}
+
+
 
 
 
