--- a/Client/src/component/components.css
+++ b/Client/src/component/components.css
@@ -324,6 +324,7 @@ h5 {
   width: 40%;
   height: auto;
   border-radius: 0;
+  text-align: center;
   margin: 10px;
   margin-bottom: 50px;
   display: inline-block;
@@ -361,6 +362,12 @@ h5 {
   width: 100px;
   height: 20px;
   margin: 20px;
+}
+
+#signInDiv  {
+  background-color: transparent;
+  border: none;
+  margin-top: 20px;
 }
 
 .SignOut {
