--- a/Client/src/component/components.css
+++ b/Client/src/component/components.css
@@ -429,107 +429,118 @@ h5 {
   width: auto;
 }
 
-.row {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-}
+
 
 .container {
+  
   margin-top: 80px;
-
+  
   justify-content: center;
-  height: 50vh;
-  font-family: "Poppins", sans-serif;
+  height: 65vh;
+  font-family: 'Poppins', sans-serif;
+  overflow: hidden; 
+  
+  margin: 0;
+  padding: 0;
+  
 }
 
-.col-lg-4 {
-  display: flex;
-  justify-content: center;
+.swiper-container {
+  width: 25%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+  width: 320px;
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 15px 50px rgba(0,0,0,0.2);
+  filter:blur(4px);
+
+  
 }
 
-.card {
-  width: 300px;
-  height: 300px;
-  transform-style: preserve-3d;
-  perspective: 500px;
-  border: none;
-  background-color: inherit;
+.swiper-slide-active
+{
+  filter:blur(0px);
+  background: #fff;
 }
 
-.card .face {
+.testimonialBox{
+  position: relative;
+  width: 100%;
+  padding: 40px;
+  padding-top: 55px;
+  color: #999;
+  box-sizing: border-box;
+  
+}
+
+.testimonialBox .quote{
   position: absolute;
-  color: rgb(190, 181, 51);
+  top: 20px;
+  right:30px;
+  opacity: 0.2;
+  width: 50px;
+  height: 50px;
+}
+
+.testimonialBox .details
+{
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.testimonialBox .details .imgBx
+{
+  position: relative;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-right: 10px;
+}
+
+.testimonialBox .details .imgBx img
+{
+  position: absolute;
+  top:0;
+  left:0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
-  box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
-  border-radius: 15px;
-  background: rgb(12, 12, 12);
-  transform-style: preserve-3d;
-  transition: 0.5s;
-  backface-visibility: hidden;
-  border-top: 1px solid #ddd;
-  border-left: 1px solid #ddd;
-  /* border-right: 1px solid #999;
-border-bottom: 1px solid #999; */
-}
-
-.card .face.front-face,
-.card .face.back-face {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.card .face.front-face .profile {
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
   object-fit: cover;
+ 
+  
 }
 
-.card .face.front-face .name {
-  letter-spacing: 2px;
+.testimonialBox .details h3
+{
+   font-size: 16px;
+   font-weight: 400;
+   letter-spacing: 1px;
+   color: #2196f3;
+   line-height: 1.1em;
 }
 
-.card .face.front-face .designation {
-  font-size: 0.8rem;
-  color: #ddd;
-  letter-spacing: 0.8px;
+.testimonialBox .details h3 span
+{
+   font-size: 12px;
+   
+   color: #666;
+  
 }
 
-.card:hover .face.front-face {
-  transform: rotateY(180deg);
+.swiper-3d .swiper-slide-shadow-left, .swiper-3d .swiper-slide-shadow-right
+{
+  background-image: none;
 }
 
-.card .face.back-face {
-  position: absolute;
-  background: rgb(12, 12, 12);
-  transform: rotateY(180deg);
-  padding: 20px 30px;
-  text-align: center;
-  user-select: none;
-}
 
-.card .face.back-face .fa-quote-left {
-  position: absolute;
-  top: 25px;
-  left: 25px;
-  font-size: 1.2rem;
-}
 
-.card .face.back-face .fa-quote-right {
-  position: absolute;
-  bottom: 35px;
-  right: 25px;
-  font-size: 1.2rem;
-}
 
-.card:hover .face.back-face {
-  transform: rotateY(360deg);
-}
 
 @media only screen and (max-width: 600px) {
   .Logo {
