--- a/Client/src/component/components.css
+++ b/Client/src/component/components.css
@@ -136,7 +136,7 @@ h5 {
 
 .OurCrew {
   text-align: center;
-  margin-top: 200px;
+  margin-top: 100px;
 }
 
 .OurCrew h1 {
@@ -536,6 +536,14 @@ h5 {
 .swiper-3d .swiper-slide-shadow-left, .swiper-3d .swiper-slide-shadow-right
 {
   background-image: none;
+}
+
+.section-break img{
+  width:100%;
+  transform:scale(0.8);
+  padding-top: 150px;
+  padding-bottom: 0px;
+  opacity: 0.7;
 }
 
 
