Add a styling to fix mobile version scrolling

--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -1,3 +1,12 @@
+html,
+body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
 .App {
     background-color: #F2F5F6;
     height: auto;
