--- a/Client/src/component/components.css
+++ b/Client/src/component/components.css
@@ -1,4 +1,3 @@
-
 .Logo {
   width: 300px;
   margin-left: 15px;
@@ -35,7 +34,7 @@ ul {
   margin-right: 60px;
 }
 
-li a {
+.LinkDiv li a {
   text-decoration: none;
   color: #000;
 }
@@ -51,6 +50,12 @@ li a {
   margin-bottom: 25px;
 }
 
+.Links a {
+  color: rgba(255, 255, 255, 0.884);
+  margin-bottom: 25px;
+  text-decoration: none;
+}
+
 .LogoDiv {
   display: inline-block;
 }
@@ -63,6 +68,10 @@ li a {
 .BookingButton {
   border: solid 2px gray;
   padding: 5px 20px 5px 20px;
+}
+.BookingButton a {
+  color: black;
+  text-decoration: none;
 }
 
 .BookingButtonDark {
@@ -225,7 +234,7 @@ li a {
   margin-right: auto;
 }
 
-.ContactUs {
+.ContactUsMain {
   width: 100%;
   text-align: center;
 }
@@ -239,7 +248,7 @@ li a {
 }
 .ContactContent {
   width: 100%;
-  height: 530px;
+  height: 590px;
   text-align: left;
   border-radius: 30px;
   background-color: white;
@@ -248,9 +257,9 @@ li a {
   margin-left: auto;
   box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.1);
 }
-.ContactUs img {
+.ContactUsMain img {
   width: auto;
-  height: 530px;
+  height: 590px;
   border-top-right-radius: 30px;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
@@ -259,7 +268,7 @@ li a {
   float: right;
 }
 .ContactUsInfo {
-  width: 45%;
+  width: 33%;
   height: auto;
   border-radius: 0;
   margin: 10px;
@@ -275,7 +284,7 @@ li a {
 
 .ContactUsInfo h4 {
   font-weight: 300;
-  width: 85%;
+  width: 100%;
   margin-bottom: 20px;
   margin-top: 20px;
 }
@@ -286,14 +295,32 @@ li a {
   margin-bottom: 7px;
 }
 
+.CallButtonContact {
+  width: 200px;
+  display: block;
+  color: white;
+  background-color: rgb(58, 58, 58);
+  margin-top: 10px;
+  text-align: center;
+  padding: 5px;
+  border: 2px solid rgb(45, 45, 45);
+}
+.CallButtonContact a {
+  color: white;
+  text-decoration: none;
+}
 .BookingButtonContact {
-  width: 150px;
-  display: inline-block;
+  width: 200px;
+  display: block;
+  margin-top: 10px;
   text-align: center;
   padding: 5px;
   border: 2px solid #505050;
 }
-
+.BookingButtonContact a {
+  color: black;
+  text-decoration: none;
+}
 .ContactUsInfo ul {
   margin-top: 20px;
   padding: 0;
@@ -356,6 +383,7 @@ li a {
 }
 
 .HairStylistDiv img {
+  display: inline-block;
   width: 80px;
   border-radius: 100%;
   margin: 20px;
@@ -669,11 +697,75 @@ li a {
   width: 100%;
   z-index: 3;
   background-color: #f2f5f6;
-  box-shadow: 0 2px 2px -2px rgba(0,0,0,.5);
+  box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.5);
 }
 
-.ser-img:hover{
-transform: scale(1.4);
+.ser-img:hover {
+  transform: scale(1.4);
+}
+
+.DivMap {
+  display: inline-block;
+}
+
+.DivMapMobile {
+  display: none;
+}
+
+@media only screen and (max-width: 1220px) {
+  .ContactImg {
+    display: none;
+  }
+  .Burger {
+    position: fixed;
+    right: 20px;
+    top: 25px;
+    display: block;
+    padding: 0;
+    margin: 0;
+  }
+  .Bur {
+    color: black;
+    height: 40px;
+    width: 40px;
+    float: right;
+  }
+  .LinkDiv {
+    display: none;
+    margin-top: 0px;
+  }
+  .ContactUsInfo {
+    width: 100%;
+    height: auto;
+    border-radius: 0;
+    margin: 10px;
+    margin-left: 47px;
+    margin-bottom: 50px;
+    display: inline-block;
+  }
+  .ContactUsInfo h1 {
+    font-weight: 700;
+    color: #505050;
+  }
+
+  .ContactUsInfo h4 {
+    font-weight: 300;
+    width: 70%;
+    margin-bottom: 20px;
+    margin-top: 20px;
+  }
+
+  .ContactUsInfo h5 {
+    font-weight: 400;
+    margin-top: 7px;
+    width: 270px;
+    margin-bottom: 7px;
+  }
+  .Links a {
+    color: rgba(255, 255, 255, 0.884);
+    margin-bottom: 25px;
+    text-decoration: none;
+  }
 }
 
 @media only screen and (max-width: 600px) {
@@ -717,6 +809,10 @@ transform: scale(1.4);
     height: 40px;
     width: 40px;
     float: right;
+  }
+  .Burgerstuff {
+    display: inline-block;
+    height: 190px;
   }
   .LinkDiv {
     display: none;
@@ -822,11 +918,11 @@ transform: scale(1.4);
     padding-bottom: 30px;
     height: auto;
   }
-  
+
   .FooterLeft {
     width: 69%;
     position: relative;
-    display: inline-block; 
+    display: inline-block;
     margin-left: 0;
   }
 
@@ -839,19 +935,25 @@ transform: scale(1.4);
   .FooterLogo {
     width: 350px;
     margin-left: 0px;
-}
+  }
 
   .Links {
     width: 31%;
     position: relative;
     margin-top: 100px;
     margin-right: 0px;
-    display: inline-block; 
+    display: inline-block;
   }
-  
+
   .Links ul li {
     color: rgba(255, 255, 255, 0.884);
     margin-bottom: 25px;
+  }
+
+  .Links a {
+    color: rgba(255, 255, 255, 0.884);
+    margin-bottom: 25px;
+    text-decoration: none;
   }
 
   .Links ul {
@@ -863,12 +965,190 @@ transform: scale(1.4);
   ul {
     padding: 0;
   }
+  .Contact {
+    width: auto;
+    margin-top: 80px;
+    margin-left: 5%;
+    margin-right: 5%;
+    border-radius: 10px;
+    display: inline-block;
+  }
+  .ContactImg {
+    display: none;
+  }
+  .ContactContent {
+    width: 100%;
+    height: 590px;
+    text-align: left;
+    border-radius: 30px;
+    background-color: white;
+    margin-top: 30px;
+    margin-right: auto;
+    margin-left: auto;
+    box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.1);
+  }
+  .ContactUsInfo {
+    width: 100%;
+    height: auto;
+    border-radius: 0;
+    margin: 10px;
+    margin-left: 47px;
+    margin-bottom: 50px;
+    display: inline-block;
+  }
+  .ContactUsInfo h1 {
+    font-weight: 700;
+    color: #505050;
+  }
 
+  .ContactUsInfo h4 {
+    font-weight: 300;
+    width: 70%;
+    margin-bottom: 20px;
+    margin-top: 20px;
+  }
+
+  .ContactUsInfo h5 {
+    font-weight: 400;
+    margin-top: 7px;
+    width: 270px;
+    margin-bottom: 7px;
+  }
   .BookingButtonDark {
     border: solid 2px gray;
     padding: 5px 20px 5px 20px;
     color: rgba(255, 255, 255, 0.884);
     margin-left: 15px;
     width: 140px;
+  }
+
+  .BookingPage {
+    width: 100%;
+    text-align: center;
+  }
+
+  .Booking {
+    width: auto;
+
+    margin-top: 100px;
+    border-radius: 10px;
+    display: inline-block;
+  }
+
+  .BookingAppointmentDiv {
+    height: 550px;
+    border-radius: 10px;
+    background-color: white;
+    display: inline-block;
+  }
+
+  .BookingAppointmentDiv img {
+    width: 80px;
+    border-radius: 100%;
+    margin: 20px;
+  }
+
+  .BookingAppointmentDiv h3 {
+    margin: 40px 20px 20px 20px;
+  }
+
+  .BookingAppointmentDiv h4 {
+    margin: 10px 10px 10px 20px;
+    font-size: 18px;
+    font-weight: 700;
+  }
+  .BookingAppointmentDiv h6 {
+    margin: 10px 20px 10px 20px;
+    font-size: 13px;
+    font-weight: 400;
+  }
+  .HairStylistDiv {
+    width: auto;
+    margin-left: 5%;
+    margin-right: 5%;
+    height: 485px;
+    text-align: center;
+    border-radius: 20px;
+    background-color: white;
+    margin-top: 30px;
+    display: inline-block;
+    box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.1);
+  }
+
+  .HairStylistDiv img {
+    display: none;
+  }
+  .HairStylistDiv .LoginPic {
+    width: auto;
+    height: 485px;
+    border-top-right-radius: 30px;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 30px;
+    margin: 0px;
+    float: right;
+  }
+  .HairStylistDiv .LoginDiv {
+    width: 100%;
+    height: auto;
+    border-radius: 0;
+    text-align: center;
+    margin: 10px;
+    margin-bottom: 50px;
+  }
+
+  .HairStylistDiv h3 {
+    margin: 40px 20px 20px 20px;
+  }
+
+  .HairStylistDiv h4 {
+    margin: 10px 10px 10px 10px;
+    font-size: 18px;
+    font-weight: 700;
+  }
+  .HairStylistDiv h6 {
+    margin: 10px 20px 10px 10px;
+    font-size: 13px;
+    font-weight: 400;
+  }
+  .AppointmentDiv {
+    width: 45%;
+    height: 550px;
+    margin-right: 150px;
+    border-radius: 10px;
+    background-color: white;
+    float: right;
+    overflow: scroll;
+    text-align: center;
+  }
+  .TestInput {
+    width: 150px;
+    margin: 20px;
+  }
+  .SignIn {
+    width: 100px;
+    height: 20px;
+    margin: 20px;
+  }
+
+  #signInDiv {
+    background-color: transparent;
+    border: none;
+    margin-top: 20px;
+  }
+
+  .SignOut {
+    width: 100px;
+    height: 20px;
+    margin: 20px;
+  }
+  .AppointmentListDiv {
+    margin-top: 110px;
+  }
+  .DivMapMobile {
+    display: inline-block;
+  }
+  .Divmap {
+    display: none;
   }
 }
