--- a/Client/src/component/components.css
+++ b/Client/src/component/components.css
@@ -6,6 +6,24 @@
   font-weight: bolder;
   text-rendering: optimizeLegibility;
 }
+/* Webfont: Merchant-Black */@font-face {
+  font-family: 'Open_Sans';
+  src: url('../assets/Open_Sans/OpenSans-VariableFont_wdth,wght.ttf') format('ttf'), /* Modern Browsers */
+       url('../assets/Open_Sans/OpenSans-Italic-VariableFont_wdth\,wght.ttf') format('ttf'); /* Safari, Android, iOS */
+           font-style:normal;
+  
+  text-rendering: optimizeLegibility;
+  }
+  @font-face {
+    font-family: 'EB_Garamond';
+    src: url('../assets/EB_Garamond/EBGaramond-VariableFont_wght.ttf') format('ttf'), /* Modern Browsers */
+         url('../assets/EB_Garamond/EBGaramond-Italic-VariableFont_wght.ttf') format('ttf'); /* Safari, Android, iOS */
+             font-style:normal;
+    
+    text-rendering: optimizeLegibility;
+    }
+
+
 body{
   font-family: MerchantBlack;
 }
@@ -14,6 +32,44 @@ body{
   width: 300px;
   margin-left: 15px;
   margin-top: 8px;
+}
+.Deskhead{
+display: grid;
+grid-template-columns: 24rem auto;
+grid-gap: 10px;
+
+}
+.LogoDiv{
+  grid-area: 1/1/2/2;
+  display: grid;
+  grid-template-columns: 8rem 16rem;
+  grid-template-rows: 2rem 2rem;
+  
+
+  background-color:aqua;
+  width: 24rem;
+  height: 4rem;
+}
+
+.logo-img{
+  grid-area: 1 / 1 / 3/2;
+  background-color: #daa520;
+  width: 8rem;
+  height:auto;
+  
+}
+.BrandName{
+   grid-area: 1/2/2/3;
+background-color: #2196f3;
+font-family: EB_Garamond;
+font-weight: 600;
+
+}
+
+.BrandName-small{
+  grid-area: 2 /2/3/3;
+  font-family: Open_Sans;
+
 }
 
 .link {
@@ -70,14 +126,16 @@ ul {
   text-decoration: none;
 }
 
-.LogoDiv {
-  display: inline-block;
-}
+
 
 .LinkDiv {
   float: right;
   margin-top: 10px;
   font-family: MerchantBlack;
+  grid-area: 1/2/2/3;
+  
+  display: grid;
+  justify-content: right;
 }
 
 .linkoff {
