--- a/Client/src/component/components.css
+++ b/Client/src/component/components.css
@@ -42,31 +42,35 @@ grid-gap: 10px;
 .LogoDiv{
   grid-area: 1/1/2/2;
   display: grid;
-  grid-template-columns: 8rem 16rem;
+  grid-template-columns: 6rem 14rem;
   grid-template-rows: 2rem 2rem;
   
 
-  background-color:aqua;
-  width: 24rem;
+  width: 20rem;
   height: 4rem;
 }
 
 .logo-img{
   grid-area: 1 / 1 / 3/2;
-  background-color: #daa520;
+  
   width: 8rem;
   height:auto;
   align-content: center;
   padding-left:57px;
   
 }
-.logo-img img{
+.LogoDiv img{
   max-width: 100%;
   max-height: 100%;
 }
+.BrandName-small img{
+  width: 50%;
+  height: 60%;
+}
+
 .BrandName{
    grid-area: 1/2/2/3;
-background-color: #2196f3;
+
 font-family: EB_Garamond;
 font-weight: 600;
 
@@ -75,6 +79,7 @@ font-weight: 600;
 .BrandName-small{
   grid-area: 2 /2/3/3;
   font-family: Open_Sans;
+  padding-left: 2px;
 
 }
 
