--- a/Client/src/component/components.css
+++ b/Client/src/component/components.css
@@ -36,6 +36,10 @@ body {
   font-family: MerchantBlack;
 }
 
+.childh {
+  margin-top: 80px;
+}
+
 .Logo {
   width: 300px;
   margin-left: 15px;
@@ -92,8 +96,22 @@ body {
 .link {
   width: 100%;
   padding: 0;
-  padding-top: 20px;
+  padding-top: 10px;
   margin-left: 20px;
+  position: relative;
+  display: block;
+  font-size: large;
+  color: black;
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  right: 15px;
+}
+
+.linkContact {
+  width: 100%;
+  padding: 0;
+  padding-top: 20px;
+  margin-left: 25px;
   position: relative;
   display: block;
   font-size: large;
@@ -249,7 +267,7 @@ ul {
 
 .ServicesHome {
   text-align: center;
-  padding-top: 45px;
+  padding-top: 65px;
 }
 
 .Services img {
@@ -283,8 +301,8 @@ ul {
 
 .OurCrew {
   text-align: center;
-  margin-top: 50px;
-  padding-top: 50px;
+  margin-top: 60px;
+  padding-top: 100px;
 }
 
 .OurCrew h1 {
@@ -305,7 +323,7 @@ ul {
 .OurCrew div {
   display: inline-block;
   background-color: white;
-  margin: 100px 80px 10px 80px;
+  margin: 60px 80px 10px 80px;
   border-radius: 15px;
   width: 16em;
   box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
@@ -354,6 +372,7 @@ ul {
 .ContactUsMain {
   width: 100%;
   text-align: center;
+  font-family: "Roboto", sans-serif;
 }
 .Contact {
   width: auto;
@@ -799,6 +818,7 @@ ul {
 .Testimonials {
   text-align: center;
   margin-top: 100px;
+  padding-top: 70px;
   margin-bottom: 50px;
 }
 .Testimonials h1 {
@@ -940,7 +960,7 @@ ul {
   }
   .Burgerstuff {
     display: inline-block;
-    height: 190px;
+    height: 230px;
   }
   .LinkDiv {
     display: none;
@@ -981,11 +1001,11 @@ ul {
 }
 
 @media only screen and (max-width: 600px) {
-  .LogoMobile {
+  /* .LogoMobile {
     display: inline;
     width: 300px;
     margin-left: 0;
-  }
+  } */
 
   .Logo {
     display: none;
@@ -1024,7 +1044,7 @@ ul {
   }
   .Burgerstuff {
     display: inline-block;
-    height: 190px;
+    height: 230px;
   }
   .LinkDiv {
     display: none;
@@ -1152,7 +1172,7 @@ ul {
   .Links {
     width: 31%;
     position: relative;
-    margin-top: 100px;
+    margin-top: 75px;
     margin-right: 0px;
     display: inline-block;
   }
@@ -1367,5 +1387,8 @@ ul {
     background-color: black;
     height: 350px;
     margin-top: 30px;
+  }
+  .childh {
+    margin-top: 40px;
   }
 }
