Remove second logo for mobile

--- a/Client/src/component/components.css
+++ b/Client/src/component/components.css
@@ -1002,9 +1002,7 @@ ul {
 
 @media only screen and (max-width: 600px) {
   .LogoMobile {
-    display: inline;
-    width: 300px;
-    margin-left: 0;
+    display: none;
   }
 
   .Logo {
